--- a/src/Components/featuredcars/Featuredcars.css
+++ b/src/Components/featuredcars/Featuredcars.css
@@ -180,6 +180,8 @@
 
     .cards{
         gap: 25px;
+        padding: 0px;
+        margin: 10px;
     }
    
     .card{
@@ -187,14 +189,15 @@
         height: 330px;
         border-radius: 10px;
         margin: 0px;
+        padding: 10px;
     }
 
     .image-container{
-        width: 280px;
-        height: 240px;
+        width: 300px;
+        height: 250px;
         overflow: hidden;
         object-fit: cover;
-        margin-left: 10px;
+        margin-left: 0px;
         margin-top: 5px;
         border-radius: 10px;
     }
