--- a/src/Components/footer/Contact.css
+++ b/src/Components/footer/Contact.css
@@ -174,7 +174,7 @@ input:focus{
     .name-input{
         height: 10px;
         padding: 20px;
-        margin: 10px 60px;
+        margin: 10px 10px;
         width: 240px;
     }
 
