--- a/src/Components/login/Login.css
+++ b/src/Components/login/Login.css
@@ -72,7 +72,8 @@
     border-bottom: .5px solid rgb(0, 0, 0);
     outline: none;
     margin-top: 8px;
-    padding: 2px;
+    padding: 10px;
+    border-radius: 10px;
 }
 
 .login-input-bar:focus{
